--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ certifi >= 14.05.14
 six >= 1.10
 python-dateutil >= 2.5.3
 requests >= 2.22.0
-git://gitlab.vailsys.com/vail-cloud-services/fc-boilerplates/python-sdk@1.0.0#egg=freeclimb
+freeclimb >= 1.0.0
